2013-02-01  SVN: new release

	* Release: 0.9.4

2013-02-01 11:41  squinney@INF.ED.AC.UK

	* BuzzSaw.spec: Added missing build-requirements on perl(Template)

2013-02-01 11:32  squinney@INF.ED.AC.UK

	* ChangeLog, lcfg.yml: BuzzSaw release: 0.9.3

2013-02-01 11:32  squinney@INF.ED.AC.UK

	* ChangeLog, lcfg.yml: BuzzSaw release: 0.9.2

2013-02-01 11:30  squinney@INF.ED.AC.UK

	* lib/BuzzSaw/Cmd/AnonymiseData.pm.in: minor tweak to debugging

2013-02-01 11:24  squinney@INF.ED.AC.UK

	* ChangeLog, lcfg.yml: BuzzSaw release: 0.9.1

2013-02-01 11:23  squinney@INF.ED.AC.UK

	* lib/BuzzSaw/Cmd/AnonymiseData.pm.in: Fixed default value for db
	  config file

2013-02-01 11:18  squinney@INF.ED.AC.UK

	* ChangeLog, lcfg.yml: BuzzSaw release: 0.9.0

2013-02-01 11:18  squinney@INF.ED.AC.UK

	* buzzsaw.sql, lcfg.yml, lib/BuzzSaw/Cmd/AnonymiseData.pm.in: Added
	  command for anonymising old data

2013-02-01 11:17  squinney@INF.ED.AC.UK

	* lib/BuzzSaw/Types.pm.in: corrected a bug with the way the
	  new_with_config method was called for BuzzSaw::DB

2013-01-30 20:38  squinney@INF.ED.AC.UK

	* lib/BuzzSaw/DB/Schema/Result/Event.pm.in: Added support for new
	  logdate column

2013-01-25 12:02  squinney@INF.ED.AC.UK

	* ChangeLog, lcfg.yml: BuzzSaw release: 0.8.3

2013-01-25 12:02  squinney@INF.ED.AC.UK

	* lcfg.yml, lib/BuzzSaw/DataSource/Files.pm.in: Added support for
	  controlling the order in which files are parsed. Added the
	  ability to set a size limit so we do not attempt to parse
	  enormous files

2013-01-14 14:21  squinney@INF.ED.AC.UK

	* ChangeLog, lcfg.yml: BuzzSaw release: 0.8.2

2013-01-14 14:21  squinney@INF.ED.AC.UK

	* t/00_use.t: bumped number of tests

2013-01-14 14:12  squinney@INF.ED.AC.UK

	* ChangeLog, lcfg.yml: BuzzSaw release: 0.8.1

2013-01-14 14:11  squinney@INF.ED.AC.UK

	* lib/BuzzSaw/Filter/Cosign.pm.in, t/00_use.t: Fixed typo. Added
	  tests for new filter modules so we will spot this quicker next
	  time

2013-01-14 14:01  squinney@INF.ED.AC.UK
